--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
+    "iron-session": "^8.0.4",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "picomatch": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
