--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "iron-session": "^8.0.4",
+    "jose": "^5.10.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "picomatch": "^2.3.1",
