--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "picomatch": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loading-skeleton": "^3.5.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
